# prayer-website

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-and-deploy.yaml
app_links/: apps.py  models.py  urls.py  views.py
app_links/templates/app_links/: group_invitation.html
templates/: apple-app-site-association.json  assetlinks.json  error_page.html  robots.txt
website/: db.py  settings.py  urls.py  views.py
